--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cruel Station Careers</title>
+    <title class="text-center">Cruel Station Careers</title>
     <style>
         h1 {
 font-size: 40px;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 font-weight: normal;
-color: rgb(105,100,105);
+color: rgb(45,70,105);
 text-align: center;
         }
 
@@ -19,7 +19,7 @@ text-align: center;
         h2 {
             font-family:Verdana, Geneva, Tahoma, sans-serif;
             font-size: 32px;
-            color: rgb(100,100,100);
+            color: rgb(160,110,240);
             text-align: center;
             font-weight: normal;
         }
@@ -37,16 +37,20 @@ text-align: center;
   <body>
     <div id="container">
 <h1>Cruel Station Careers</h1>
-<img id="banner" src="http://127.0.0.1:5000/static/banner.jpg" height="320">
-<h2>About Cruel Station</h2>
+<img id="banner" src="/static/banner.jpg" height="320">
+<h2 class="text-center">About Cruel Station</h2>
 <p class="bodytext">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
-<h2>Open Positions</h2>
-<p class="bodytext">TODO - Show the jobs here</p>
+<h2 class="text-center mt-2 mb-4">Open Positions</h2>
+<div>
+    {% for job in jobs %}
+<div>{{job['title']}}</div>
+    {% endfor %}
+</div>
 <div style="text-align:center;">
-<button>Contact Us</button>
-<p>Copyright 2023, Cruel Station</p>
+<button class="btn btn-outline-success">Contact Us</button>
+<p class="mt-4">Copyright 2023, Cruel Station</p>
 </div>
 </div>
      </body>
