--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <h1 class="text-center">{{company_name}} Careers</h1>
-        <img class="img-fluid" id="banner" src="/static/banner.jpg" height="320">
+        <img class="img-fluid" id="banner" src="/static/banner3.jpg" height="320">
         <h2 class="text-center">About Cruel Station</h2>
         <p class="lead">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
