--- a/templates/index.html
+++ b/templates/index.html
@@ -12,15 +12,18 @@
                 height: 360px;
                 object-fit: cover;
                 width: 100%;
+                margin-bottom: 16px;
             }
         </style>
 </head>
 
 <body>
+    {% include 'nav.html' %}
+    <img class="img-fluid" id="banner" src="/static/banner3.jpg" height="320">
     <div class="container">
         <h1 class="text-center">{{company_name}} Careers</h1>
-        <img class="img-fluid" id="banner" src="/static/banner3.jpg" height="320">
-        <h2 class="text-center">About Cruel Station</h2>
+        <div class="row" style="margin-bottom:16px">
+            <div class="col-md-6">
         <p class="lead">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -28,6 +31,11 @@
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
         </p>
+            </div>
+            <div class="d-none d-md-block col-md-6">
+            <img src="/static/ppwork.jpg" style="height:320px;border-radius:4px;">
+        </div>
+    </div>
         <h2 class="text-center mt-2 mb-4">Open Positions</h2>
         <div>
             {% for job in jobs %}
@@ -36,9 +44,10 @@
         </div>
         <div class="text-center">
             <button class="btn btn-primary btn-lg">Contact Us</button>
-            <p class="mt-4">Copyright 2023, Cruel Station</p>
+
         </div>
     </div>
+    {% include 'footer.html' %}
 </body>
 
 </html>
