--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -12,8 +12,8 @@
     </div>
     {% endif %}
 </div>
-<div class="col-3">
-<button type="button" class="btn btn-outline-primary">Apply</button>
+<div class="col-2 padding-right:16px">
+<a href="https://pornhub.com" type="button" class="btn btn-outline-primary float-right align-middle">Apply</a>
 </div>
 
 </div>
