--- a/templates/index.html
+++ b/templates/index.html
@@ -3,25 +3,16 @@
 
 <head>
     <title class="text-center">Cruel Station Careers</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <style>
-            #banner {
-                height: 360px;
-                object-fit: cover;
-                width: 100%;
-                margin-bottom: 16px;
-            }
-        </style>
+    {% include 'bootstrap.html' %}
+       
 </head>
 
 <body>
     {% include 'nav.html' %}
-    <img class="img-fluid" id="banner" src="/static/banner3.jpg" height="320">
+    {% include 'banner.html' %}
+   
     <div class="container">
-        <h1 class="text-center">{{company_name}} Careers</h1>
+        <h1 class="text-center"> Cruel Station Careers</h1>
         <div class="row" style="margin-bottom:16px">
             <div class="col-md-6">
         <p class="lead">
