--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -13,7 +13,7 @@
     {% endif %}
 </div>
 <div class="col-2 padding-right:16px">
-<a href="mailto:hello@atwale44.ai?subject=Application for {{job['title']}}" type="button" class="btn btn-outline-primary float-right align-middle">Apply</a>
+<a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary float-right align-middle">Apply</a>
 </div>
 
 </div>
