--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -11,7 +11,7 @@
             <h1 class="text-center"> Cruel Station Careers</h1>
         <h3 class="mb-2" >{{job.title}}</h3>
         <p class="lead mt-0">{{job.location}}</p>
-        
+
         <h4>Responsibilities</h4>
         <ul>
             {% for line in job.responsibilities.split("\n") %}
@@ -27,7 +27,7 @@
         </ol>
         
         <h4>Salary</h4>
-        <p>{{job.currency}}{{job.salary}}</p>
+        <p>{{job.salary}}{{job.currency}}</p>
         {% include 'footer.html' %}
         </div>
     </body>
