--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -28,7 +28,10 @@
         
         <h4>Salary</h4>
         <p>{{job.salary}}{{job.currency}}</p>
-        {% include 'footer.html' %}
+        {% include 'app_form.html' %}
         </div>
+        {% include 'footer.html' %}
+
+    
     </body>
     </html>
