--- a/templates/app_form.html
+++ b/templates/app_form.html
@@ -2,17 +2,17 @@
 <form action="/job/{{job['id']}}/apply" method="post">
     <div class="mb-2">
     <label>Full Name</label><br>
-    <input type="text" name="full_name" placeholder="Clark Kent">
+    <input type="text" required name="full_name" placeholder="Clark Kent">
 </div>
 
 <div class="mb-2">
     <label>Email</label><br>
-    <input type="text" name="email" placeholder="Clark@smallville.com">
+    <input type="email" required name="email"  placeholder="Clark@smallville.com">
 </div>
 
 <div class="mb-2">
     <label>LinkedIn URL</label><br>
-    <input type="text" name="linkedin_url" placeholder="https://linkedin.com/in/clark_kent">
+    <input type="url" name="linkedin_url" placeholder="https://linkedin.com/in/clark_kent">
 </div>
 
 <div class="mb-2">
@@ -27,7 +27,7 @@
 
     <div class="mb-2">
         <label>Resume URL</label><br>
-        <input type="text" name="resume_url">
+        <input type="url" name="resume_url">
     </div>
 
     <input type="Submit" >
