--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,9 +8,9 @@
   
       <ul class="nav col-md-4 justify-content-end">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+        <li class="nav-item"><a href="/about" class="nav-link px-2 text-body-secondary">About</a></li>
         <li class="nav-item"><a href="/register" class="nav-link px-2 text-body-secondary">Register</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Events</a></li>
+        <li class="nav-item"><a href="/login" class="nav-link px-2 text-body-secondary">Login</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
       </ul>
     </footer>
