update and commit

--- a/templates/logon.html
+++ b/templates/logon.html
@@ -9,7 +9,7 @@
             {% include 'banner.html' %}
         <div class="container">
             <h1 class="text-center"> Cruel Station Careers</h1>
-<p>Welcome to Cruel Station User Profile.</p>
+<p>Welcome {{user}} to Cruel Station User Profile.</p>
 
         </div>
             {% include 'footer.html' %}
